# axon

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
axon-agent/: gen_proto.sh  go.mod  heartbeat.go  main.go
axon-agent/proto/: axon.pb.go  axon_grpc.pb.go
axon-core/: Cargo.toml  build.rs
axon-core/src/: client.rs  heartbeat.rs  main.rs  process_manager.rs  tui.rs
proto/: axon.proto
