[package]
name = "axon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
log = "0.4.29"
prost = "0.13.3"
prost-types = "0.13.3"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full", "macros"] }
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost", "transport"] }


